--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "uuid": "^3.3.3"
+  },
+   "engines": {
+    "node": "v14.17.5",
+    "npm" : "6.14.14"
   }
 }
