--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4",
+    "mongoose": "^5.7.8",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "uuid": "^3.3.3"
   },
-   "engines": {
-    "node": ">=14.17.5",
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
