--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,4 @@
     "multer": "^1.4.2",
     "uuid": "^3.3.3"
   },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
-  }
 }
